app/resources/css/components/thumb.css
.thumb {
    display: inline-block;
    width: 1em;
    height: 1em;
}

.thumb > svg {
    fill: currentColor;
    width: 100%;
    height: 100%;
    vertical-align: -10%;
}

.thumb--against > svg,
.thumb--rejected > svg {
    transform: scale(1, -1);
}

.thumb--neutral > svg,
.thumb--abstention > svg {
    transform: rotate(90deg) scale(-1, 1);
}

.thumb--circle {
    width: 1.5em;
    height: 1.5em;
    padding: 0.25em;
    vertical-align: middle;

    border-radius: 50%;
    background-color: currentColor;
}

.thumb--circle.thumb--for,
.thumb--circle.thumb--adopted {
    background-color: var(--green);
}

.thumb--circle.thumb--against,
.thumb--circle.thumb--rejected {
    background-color: var(--red);
}

.thumb--circle.thumb--abstention {
    background-color: var(--blue);
}

.thumb--circle > svg {
    color: #fff;
    vertical-align: 0;
}

.thumb--circle.thumb--for > svg,
.thumb--circle.thumb--adopted > svg {
    vertical-align: 20%;
}

